--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="progress">本协议是您与你在哪客户端所有者签下契约，请您仔细阅读本注册协议，您点击注册按钮后，本协议就构成对双方有约束的法律文件。</string>
+    <string name="progressone">1.1本协议是您与你在哪客户端所有者签下契约，请您仔细阅读本注册协议，您点击注册按钮后，本协议就构成对双方有约束的法律文件。\n
+                                1.2本协议是您与你在哪客户端所有者签下契约，请您仔细阅读本注册协议，您点击注册按钮后，本协议就构成对双方有约束的法律文件。\n
+                                1.3本协议是您与你在哪客户端所有者签下契约，请您仔细阅读本注册协议，您点击注册按钮后，本协议就构成对双方有约束的法律文件。</string>
+    <string name="progresstwo">2.1本协议是您与你在哪客户端所有者签下契约，请您仔细阅读本注册协议，您点击注册按钮后，本协议就构成对双方有约束的法律文件。\n
+                                2.2本协议是您与你在哪客户端所有者签下契约，请您仔细阅读本注册协议，您点击注册按钮后，本协议就构成对双方有约束的法律文件。\n
+                                2.3本协议是您与你在哪客户端所有者签下契约，请您仔细阅读本注册协议，您点击注册按钮后，本协议就构成对双方有约束的法律文件。</string>
 </resources>
